k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
spec:
  ports:
    - port: 80
      targetPort: 3333
      protocol: TCP
  selector:
    component: frontend
