k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - sih.saraswat.co
      secretName: sih-saraswat-com-frontend
  rules:
    - host: sih.saraswat.co
      http:
        paths:
          - path: /
            frontend:
              serviceName: frontend-svc
              servicePort: 80
